--- a/src/main/resources/assets/unidentifiedenchantments/lang/en_us.json
+++ b/src/main/resources/assets/unidentifiedenchantments/lang/en_us.json
@@ -3,6 +3,12 @@
   "enchantment.unidentifiedenchantments.hungercurse": "Curse of Hunger",
   "enchantment.unidentifiedenchantments.weightcurse": "Curse of Weight",
   "enchantment.unidentifiedenchantments.insomniacurse": "Curse of Insomnia",
-  "enchantment.unidentifiedenchantments.vanitycurse": "Curse of vanity",
-  "enchantment.unidentifiedenchantments.madnesscurse": "Curse of Madness"
+  "enchantment.unidentifiedenchantments.vanitycurse": "Curse of Vanity",
+  "enchantment.unidentifiedenchantments.madnesscurse": "Curse of Madness",
+  
+  "enchantment.unidentifiedenchantments.hungercurse.desc": "Causes hunger to be depleted faster",
+  "enchantment.unidentifiedenchantments.weightcurse.desc": "Decreases movementspeed in water",
+  "enchantment.unidentifiedenchantments.insomniacurse.desc": "Causes you to always think a mob is close, making you unable to sleep",
+  "enchantment.unidentifiedenchantments.vanitycurse.desc": "Does nothing, but it looked pretty",
+  "enchantment.unidentifiedenchantments.madnesscurse.desc": "Causes a creeper to appear every so often, only you can see it, and it does not cause damage."
 }
